force-app/main/default/objects/Community__c/fields/Active_Corner_Package__c.field-meta.xml
<CustomField>
    <fullName>Active_Corner_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default Community Package for corner lots in this community. Used when Lot.Corner_Lot__c = true.</description>
    <label>Active Corner Package</label>
    <referenceTo>Community_Package__c</referenceTo>
    <relationshipLabel>Communities (Corner Package)</relationshipLabel>
    <relationshipName>Corner_Package_Communities</relationshipName>
    <type>Lookup</type>
</CustomField>