force-app/main/default/objects/Community__c/fields/Active_Lot_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Lot_Count__c</fullName>
    <description>Count of active lots in this community. Maintained by LovingRollupBatch.</description>
    <label>Active Lot Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>