force-app/main/default/objects/Community__c/fields/Active_Standard_Package__c.field-meta.xml
<CustomField>
    <fullName>Active_Standard_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default Community Package for standard (non-corner) lots in this community.</description>
    <label>Active Standard Package</label>
    <referenceTo>Community_Package__c</referenceTo>
    <relationshipLabel>Communities (Standard Package)</relationshipLabel>
    <relationshipName>Standard_Package_Communities</relationshipName>
    <type>Lookup</type>
</CustomField>