force-app/main/default/objects/Community__c/fields/Annual_Contract__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the active annual lawn care contract if applicable</description>
    <label>Annual Contract</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Communities</relationshipLabel>
    <relationshipName>Communitys</relationshipName>
    <type>Lookup</type>
</CustomField>