force-app/main/default/objects/Community__c/fields/Aqua_Active__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this community is enrolled in the Aqua irrigation service and participates in daily check routes.</description>
    <label>Aqua Active</label>
    <type>Checkbox</type>
</CustomField>