force-app/main/default/objects/Community__c/fields/Aqua_Customer__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Yes = this community is on the Aqua program.</description>
    <label>Aqua Customer</label>
    <type>Checkbox</type>
</CustomField>