force-app/main/default/objects/Community__c/fields/Aqua_Included__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aqua Included</label>
    <type>Checkbox</type>
</CustomField>