force-app/main/default/objects/Community__c/fields/Aqua_Notes__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Notes__c</fullName>
    <label>Aqua Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>