force-app/main/default/objects/Community__c/fields/Aqua_Zones__c.field-meta.xml
<CustomField>
    <fullName>Aqua_Zones__c</fullName>
    <label>Aqua Zones</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>