force-app/main/default/objects/Community__c/fields/Assigned_FM__c.field-meta.xml
<CustomField>
    <fullName>Assigned_FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default Field Manager for this community.</description>
    <label>Assigned FM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Communitys</relationshipName>
    <type>Lookup</type>
</CustomField>