force-app/main/default/objects/Community__c/fields/Avg_Sod_Roll_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Avg_Sod_Roll_Coverage__c</fullName>
    <defaultValue>9</defaultValue>
    <description>Average square footage covered by one sod roll for this community. Used in DQC.Sod_Rolls_Expected__c formula to calculate expected roll count at delivery (WO.Sod_Square_Footage__c / Avg_Sod_Roll_Coverage__c). Default is 9 SF per roll if blank. This is specific to sod rolls. Do not confuse with Coverage_Per_Bale__c which is for pine straw bales — these are separate materials with separate coverage rates.</description>
    <label>Avg Sod Roll Coverage (SF)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>