force-app/main/default/objects/Community__c/fields/BMG_Package_Code__c.field-meta.xml
<CustomField>
    <fullName>BMG_Package_Code__c</fullName>
    <description>Pre-loads on every WO</description>
    <label>BMG Package Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>