force-app/main/default/objects/Community__c/fields/Builder_Account__c.field-meta.xml
<CustomField>
    <fullName>Builder_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The builder client that owns this community.</description>
    <label>Builder Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Communities</relationshipLabel>
    <relationshipName>Communitys</relationshipName>
    <type>Lookup</type>
</CustomField>