force-app/main/default/objects/Community__c/fields/Closed_Lot_Count__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lot_Count__c</fullName>
    <description>Count of closed lots in this community. Maintained by LovingRollupBatch.</description>
    <label>Closed Lot Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>