force-app/main/default/objects/Community__c/fields/CM_Contact__c.field-meta.xml
<CustomField>
    <fullName>CM_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact to notify for variance billing and Aqua service escalations.</description>
    <label>Community Manager Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Communities (Aqua CM)</relationshipLabel>
    <relationshipName>Communities_Aqua_CM</relationshipName>
    <type>Lookup</type>
</CustomField>