force-app/main/default/objects/Community__c/fields/Community_Address__c.field-meta.xml
<CustomField>
    <fullName>Community_Address__c</fullName>
    <label>Community Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>