force-app/main/default/objects/Community__c/fields/Community_City__c.field-meta.xml
<CustomField>
    <fullName>Community_City__c</fullName>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>