force-app/main/default/objects/Community__c/fields/Community_Zip__c.field-meta.xml
<CustomField>
    <fullName>Community_Zip__c</fullName>
    <label>Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>