force-app/main/default/objects/Community__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>Geographic county for this community (e.g. Mecklenburg). Used for weather alert matching via Weather_Alert__c.County__c. Separate from Division__c which is the LOVING operating division.</description>
    <label>County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>