force-app/main/default/objects/Community__c/fields/Default_Crew__c.field-meta.xml
<CustomField>
    <fullName>Default_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default crew assigned to this community. Pre-populated on new Work Orders when no override is specified.</description>
    <label>Default Crew</label>
    <referenceTo>Crew__c</referenceTo>
    <relationshipLabel>Communities (Default)</relationshipLabel>
    <relationshipName>Communities_Default</relationshipName>
    <type>Lookup</type>
</CustomField>