force-app/main/default/objects/Community__c/fields/Division_Region__c.field-meta.xml
<CustomField>
    <fullName>Division_Region__c</fullName>
    <description>Geographic region within Charlotte/Carolinas operations.</description>
    <label>Division Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>