force-app/main/default/objects/Community__c/fields/Drainage_Standard__c.field-meta.xml
<CustomField>
    <fullName>Drainage_Standard__c</fullName>
    <label>Drainage Standard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>