force-app/main/default/objects/Community__c/fields/Estimated_Lot_Count__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Lot_Count__c</fullName>
    <description>For capacity planning</description>
    <label>Estimated Lot Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>