force-app/main/default/objects/Community__c/fields/First_Lot_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Lot_Install_Date__c</fullName>
    <label>First Lot Install Date</label>
    <type>Date</type>
</CustomField>