force-app/main/default/objects/Community__c/fields/FM_Assignment__c.field-meta.xml
<CustomField>
    <fullName>FM_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default Field Manager (Tyler/Scott/Jamie/Jersain)</description>
    <label>FM Assignment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Communities_FM_Assignment</relationshipName>
    <type>Lookup</type>
</CustomField>