force-app/main/default/objects/Community__c/fields/GPS_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>GPS_Coordinates__c</fullName>
    <description>Lat/long used for map-based scheduling and routing.</description>
    <label>GPS Coordinates</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>