force-app/main/default/objects/Community__c/fields/GPS_Latitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Latitude__c</fullName>
    <description>Decimal latitude for map display and routing.</description>
    <label>GPS Latitude</label>
    <precision>11</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>