force-app/main/default/objects/Community__c/fields/GPS_Longitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Longitude__c</fullName>
    <description>Decimal longitude for map display and routing.</description>
    <label>GPS Longitude</label>
    <precision>11</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>