force-app/main/default/objects/Community__c/fields/HOA_Details__c.field-meta.xml
<CustomField>
    <fullName>HOA_Details__c</fullName>
    <label>HOA Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>