force-app/main/default/objects/Community__c/fields/Home_Types__c.field-meta.xml
<CustomField>
    <fullName>Home_Types__c</fullName>
    <label>Home Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single-Family</fullName>
            </value>
            <value>
                <fullName>Townhomes</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>