force-app/main/default/objects/Community__c/fields/Irrigation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_Notes__c</fullName>
    <label>Irrigation Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>