force-app/main/default/objects/Community__c/fields/Irrigation_Type__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_Type__c</fullName>
    <label>Irrigation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full System</fullName>
            </value>
            <value>
                <fullName>Temp Irrigation</fullName>
            </value>
            <value>
                <fullName>Drip</fullName>
            </value>
            <value>
                <fullName>Hose Bib Only</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>