force-app/main/default/objects/Community__c/fields/Irrigation_Zone_Count__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_Zone_Count__c</fullName>
    <label>Irrigation Zone Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>