force-app/main/default/objects/Community__c/fields/Known_Site_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Known_Site_Concerns__c</fullName>
    <label>Known Site Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>