force-app/main/default/objects/Community__c/fields/Landscape_Proffers__c.field-meta.xml
<CustomField>
    <fullName>Landscape_Proffers__c</fullName>
    <label>Landscape Proffers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>