force-app/main/default/objects/Community__c/fields/Last_Lot_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Lot_Install_Date__c</fullName>
    <label>Last Lot Install Date</label>
    <type>Date</type>
</CustomField>