force-app/main/default/objects/Community__c/fields/Lawn_Care_Customer__c.field-meta.xml
<CustomField>
    <fullName>Lawn_Care_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, triggers recurring lawn care work order generation for this community.</description>
    <label>Lawn Care Customer</label>
    <type>Checkbox</type>
</CustomField>