force-app/main/default/objects/Community__c/fields/Lot_Layout_Link__c.field-meta.xml
<CustomField>
    <fullName>Lot_Layout_Link__c</fullName>
    <label>Lot Layout Link</label>
    <type>Url</type>
</CustomField>