force-app/main/default/objects/Community__c/fields/Lot_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Lot_Numbers__c</fullName>
    <label>Lot Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>