force-app/main/default/objects/Community__c/fields/Lot_Trees_Count__c.field-meta.xml
<CustomField>
    <fullName>Lot_Trees_Count__c</fullName>
    <label>Lot Trees (count)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>