force-app/main/default/objects/Community__c/fields/Loving_Operating_Division__c.field-meta.xml
<CustomField>
    <fullName>Loving_Operating_Division__c</fullName>
    <description>Which Loving operating unit (shop/branch) services this community. Sourced from Cloudscape Division field.</description>
    <inlineHelpText>Loving&apos;s own shop/branch servicing this community. E.g. &quot;The Loving Group - Charlotte&quot;.</inlineHelpText>
    <label>Loving Operating Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aqua Service</fullName>
            </value>
            <value>
                <fullName>Materials &amp; Services - TLG Carolinas</fullName>
            </value>
            <value>
                <fullName>Materials &amp; Services - Turf Carolinas</fullName>
            </value>
            <value>
                <fullName>TerraROK Charleston</fullName>
            </value>
            <value>
                <fullName>The Loving Group - Asheville</fullName>
            </value>
            <value>
                <fullName>The Loving Group - Charlotte</fullName>
            </value>
            <value>
                <fullName>The Loving Group - Columbia</fullName>
            </value>
            <value>
                <fullName>The Loving Group - Fort Myers</fullName>
            </value>
            <value>
                <fullName>The Loving Group - Greenville</fullName>
            </value>
            <value>
                <fullName>The Loving Group - Triad</fullName>
            </value>
            <value>
                <fullName>TLG Turf</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>