force-app/main/default/objects/Community__c/fields/Market_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Market_Account_Name__c</fullName>
    <formula>Builder_Account__r.Name</formula>
    <inlineHelpText>Market Account name pulled from Builder Account lookup.</inlineHelpText>
    <label>Market Account (Name)</label>
    <type>Text</type>
</CustomField>