force-app/main/default/objects/Community__c/fields/Market_BMG_Pricing_Link__c.field-meta.xml
<CustomField>
    <fullName>Market_BMG_Pricing_Link__c</fullName>
    <formula>IF(ISBLANK(Builder_Account__r.BMG_Link__c), &quot;&quot;, HYPERLINK(Builder_Account__r.BMG_Link__c, Builder_Account__r.BMG_Link__c, &quot;_blank&quot;))</formula>
    <inlineHelpText>BMG pricing link pulled from Market Account.</inlineHelpText>
    <label>BMG Pricing Link</label>
    <type>Text</type>
</CustomField>