force-app/main/default/objects/Community__c/fields/Market_Contract_Link__c.field-meta.xml
<CustomField>
    <fullName>Market_Contract_Link__c</fullName>
    <formula>IF(ISBLANK(Builder_Account__r.Contract_Link__c), &quot;&quot;, HYPERLINK(Builder_Account__r.Contract_Link__c, Builder_Account__r.Contract_Link__c, &quot;_blank&quot;))</formula>
    <inlineHelpText>Contract link pulled from Market Account.</inlineHelpText>
    <label>Contract Link</label>
    <type>Text</type>
</CustomField>