force-app/main/default/objects/Community__c/fields/Market_Drive_Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Market_Drive_Folder_Link__c</fullName>
    <formula>IF(ISBLANK(Builder_Account__r.Drive_Folder_Link__c), &quot;&quot;, HYPERLINK(Builder_Account__r.Drive_Folder_Link__c, Builder_Account__r.Drive_Folder_Link__c, &quot;_blank&quot;))</formula>
    <inlineHelpText>Shared drive folder pulled from Market Account.</inlineHelpText>
    <label>Shared Drive Folder</label>
    <type>Text</type>
</CustomField>