force-app/main/default/objects/Community__c/fields/Market_Insurance_COI_Link__c.field-meta.xml
<CustomField>
    <fullName>Market_Insurance_COI_Link__c</fullName>
    <formula>IF(ISBLANK(Builder_Account__r.Insurance_COI_Link__c), &quot;&quot;, HYPERLINK(Builder_Account__r.Insurance_COI_Link__c, Builder_Account__r.Insurance_COI_Link__c, &quot;_blank&quot;))</formula>
    <inlineHelpText>Insurance COI link pulled from Market Account.</inlineHelpText>
    <label>Insurance COI Link</label>
    <type>Text</type>
</CustomField>