force-app/main/default/objects/Community__c/fields/Market_Loving_AP__c.field-meta.xml
<CustomField>
    <fullName>Market_Loving_AP__c</fullName>
    <formula>IF(ISBLANK(Builder_Account__r.Loving_AP__r.Id), &quot;&quot;, Builder_Account__r.Loving_AP__r.FirstName &amp; &quot; &quot; &amp; Builder_Account__r.Loving_AP__r.LastName)</formula>
    <inlineHelpText>LOVING AP on the parent Market Account.</inlineHelpText>
    <label>LOVING AP (from Market)</label>
    <type>Text</type>
</CustomField>