force-app/main/default/objects/Community__c/fields/Market_Loving_CSM__c.field-meta.xml
<CustomField>
    <fullName>Market_Loving_CSM__c</fullName>
    <formula>IF(ISBLANK(Builder_Account__r.Loving_CSM__r.Id), &quot;&quot;, Builder_Account__r.Loving_CSM__r.FirstName &amp; &quot; &quot; &amp; Builder_Account__r.Loving_CSM__r.LastName)</formula>
    <inlineHelpText>LOVING CSM on the parent Market Account.</inlineHelpText>
    <label>LOVING CSM (from Market)</label>
    <type>Text</type>
</CustomField>