force-app/main/default/objects/Community__c/fields/Market_Loving_FM__c.field-meta.xml
<CustomField>
    <fullName>Market_Loving_FM__c</fullName>
    <formula>IF(ISBLANK(Builder_Account__r.Loving_FM__r.Id), &quot;&quot;, Builder_Account__r.Loving_FM__r.FirstName &amp; &quot; &quot; &amp; Builder_Account__r.Loving_FM__r.LastName)</formula>
    <inlineHelpText>LOVING Field Manager on the parent Market Account.</inlineHelpText>
    <label>LOVING FM (from Market)</label>
    <type>Text</type>
</CustomField>