force-app/main/default/objects/Community__c/fields/Market_Portal_Link__c.field-meta.xml
<CustomField>
    <fullName>Market_Portal_Link__c</fullName>
    <formula>IF(ISBLANK(Builder_Account__r.Builder_Portal_Link__c), &quot;&quot;, HYPERLINK(Builder_Account__r.Builder_Portal_Link__c, Builder_Account__r.Builder_Portal_Link__c, &quot;_blank&quot;))</formula>
    <inlineHelpText>Builder portal pulled from Market Account.</inlineHelpText>
    <label>Builder Portal Link</label>
    <type>Text</type>
</CustomField>