force-app/main/default/objects/Community__c/fields/Market_Scope_Of_Work_Link__c.field-meta.xml
<CustomField>
    <fullName>Market_Scope_Of_Work_Link__c</fullName>
    <formula>IF(ISBLANK(Builder_Account__r.Scope_Of_Work_Link__c), &quot;&quot;, HYPERLINK(Builder_Account__r.Scope_Of_Work_Link__c, Builder_Account__r.Scope_Of_Work_Link__c, &quot;_blank&quot;))</formula>
    <inlineHelpText>Scope of Work link from Market Account.</inlineHelpText>
    <label>Scope of Work Link</label>
    <type>Text</type>
</CustomField>