force-app/main/default/objects/Community__c/fields/Market_Warranty_Program__c.field-meta.xml
<CustomField>
    <fullName>Market_Warranty_Program__c</fullName>
    <formula>Builder_Account__r.Warranty_Program__c</formula>
    <inlineHelpText>Warranty program from Market Account.</inlineHelpText>
    <label>Warranty Program</label>
    <type>Text</type>
</CustomField>