force-app/main/default/objects/Community__c/fields/Model_Home_Discount_Notes__c.field-meta.xml
<CustomField>
    <fullName>Model_Home_Discount_Notes__c</fullName>
    <label>Model Home Discount Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>