force-app/main/default/objects/Community__c/fields/Model_Home_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Model_Home_Discount_Pct__c</fullName>
    <label>Model Home Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>