force-app/main/default/objects/Community__c/fields/Number_Of_Lots__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Lots__c</fullName>
    <label>Number of Lots</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>