force-app/main/default/objects/Community__c/fields/Original_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Historical trace only</description>
    <label>Original Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Communities_Original_Opp</relationshipName>
    <type>Lookup</type>
</CustomField>