force-app/main/default/objects/Community__c/fields/Parent_Builder_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Builder_Account__c</fullName>
    <formula>Builder_Account__r.Parent.Name</formula>
    <inlineHelpText>Auto-populated from the Division Account&apos;s parent.</inlineHelpText>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>