force-app/main/default/objects/Community__c/fields/Phases__c.field-meta.xml
<CustomField>
    <fullName>Phases__c</fullName>
    <label>Phases</label>
    <length>100</length>
    <type>Text</type>
</CustomField>