force-app/main/default/objects/Community__c/fields/Pine_Straw_Coverage_Per_Bale__c.field-meta.xml
<CustomField>
    <fullName>Pine_Straw_Coverage_Per_Bale__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Average square feet of coverage per pine straw bale for this community. Converts pine straw source square footage into estimated bales only. This field must never be used for sod roll calculations — sod roll coverage is tracked separately in Avg_Sod_Roll_Coverage__c. These are separate materials with separate coverage rates and formulas.</description>
    <label>Pine Straw Coverage Per Bale (SF)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>