force-app/main/default/objects/Community__c/fields/Plant_Types__c.field-meta.xml
<CustomField>
    <fullName>Plant_Types__c</fullName>
    <label>Plant Types / Sizes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>