force-app/main/default/objects/Community__c/fields/Pricing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The client-specific pricing sheet used for billable work</description>
    <label>Pricing Schedule</label>
    <referenceTo>Builder_Pricing_Book__c</referenceTo>
    <relationshipLabel>Communities</relationshipLabel>
    <relationshipName>Pricing_Communities</relationshipName>
    <type>Lookup</type>
</CustomField>