force-app/main/default/objects/Community__c/fields/Primary_CM__c.field-meta.xml
<CustomField>
    <fullName>Primary_CM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary builder Construction Manager contact for this community. Used for same-day repair notifications, billing variance alerts, and community-level communications.</description>
    <label>Primary CM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Communities (Primary CM)</relationshipLabel>
    <relationshipName>Communities_Primary_CM</relationshipName>
    <type>Lookup</type>
</CustomField>