force-app/main/default/objects/Community__c/fields/Release_Schedule_Days__c.field-meta.xml
<CustomField>
    <fullName>Release_Schedule_Days__c</fullName>
    <description>Community-level override of the Division Account Release Schedule (Days). Days between PO release date and expected landscape start for this specific community. If blank, Work_Order__c.Calculated_Start_Date falls back to the Division Account value.</description>
    <label>Release Schedule (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>