force-app/main/default/objects/Community__c/fields/Scope_Notes__c.field-meta.xml
<CustomField>
    <fullName>Scope_Notes__c</fullName>
    <label>Additional Scope Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>