force-app/main/default/objects/Community__c/fields/Service_Flags__c.field-meta.xml
<CustomField>
    <fullName>Service_Flags__c</fullName>
    <label>Service Flags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aqua</fullName>
            </value>
            <value>
                <fullName>Irrigation</fullName>
            </value>
            <value>
                <fullName>Grading</fullName>
            </value>
            <value>
                <fullName>Lawn Care</fullName>
            </value>
            <value>
                <fullName>Refreshes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>