force-app/main/default/objects/Community__c/fields/Service_Model__c.field-meta.xml
<CustomField>
    <fullName>Service_Model__c</fullName>
    <label>Service Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All-Inclusive Maintenance</fullName>
            </value>
            <value>
                <fullName>By Request Only (Lawn Care)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>