force-app/main/default/objects/Community__c/fields/Service_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory_Name__c</fullName>
    <description>FSL Service Territory name for this community (e.g. Charlotte Metro, Triad / Piedmont). Set during territory review. Used for dispatcher console filtering and routing. Separate from Territory__c formula field which reflects builder market.</description>
    <label>Service Territory</label>
    <length>80</length>
    <type>Text</type>
</CustomField>