force-app/main/default/objects/Community__c/fields/ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerritory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FSL ServiceTerritory this community belongs to. Used for route optimization and dispatch.</description>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Communities</relationshipLabel>
    <relationshipName>Communities</relationshipName>
    <type>Lookup</type>
</CustomField>