force-app/main/default/objects/Community__c/fields/Shrub_Package_Details__c.field-meta.xml
<CustomField>
    <fullName>Shrub_Package_Details__c</fullName>
    <label>Shrub Package Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>