force-app/main/default/objects/Community__c/fields/Sod_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Sod_Sqft__c</fullName>
    <label>Sod (sq ft)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>